--- a/src/App.css
+++ b/src/App.css
@@ -73,3 +73,12 @@ button {
   cursor: pointer;
   margin-top: 10px;
 }
+
+.samosa:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
+.samosa:active {
+  transform: scale(0.95);
+}
